# pyrenote-desk

./: .eslintrc.json  .gitignore  .gitmodules  :w  README.md  eslint.config.mjs  eslint.config.ts  magnus.sqlite.sql  mydatabase.db  package-lock.json  package.json  pyproject.toml  pyrenoteDeskDatabase.db  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
databases/: argentina.db  brazil.db  peru.db  puerto_rico.db
main/: background.ts  preload.js  preload.ts  schema.d.ts
main/helpers/: util-types.ts  utils.js  utils.ts
main/mutations/: annotation.ts  createAnnotation.ts  createDeployment.ts  createLabeler.ts  createModel.ts  createRecorder.ts  createRecording.ts  createSite.ts  createSpecies.ts  createSurvey.ts  deleteAnnotation.ts  index.ts  recording.ts  regionOfInterest.ts  updateAnnotation.ts
main/queries/: index.ts  listAnnotationsByRecordingId.ts  listAnnotationsByRecordingIds.ts  listAnnotationsByRegionId.ts  listAnnotationsRecordings.ts  listAnnotationsandLabelers.ts  listDatabases.ts  listDeployments.ts  listModelAccuracyBySpecies.ts  listModels.ts  listRecorders.ts  listRecordings.ts  listRecordingsByDeploymentId.ts  listRecordingsByFilters.ts  listRecordingsBySiteId.ts  listRecordingsLabeledByModelId.ts  listRecordingsLabeledByModels.ts  listRegionOfInterestByRecordingId.ts  listSites.ts  listSpecies.ts  listSurveys.ts  listUnlabeledRecordings.ts  listUnlabeledRecordingsByDeploymentId.ts
pyfiles/: gnb.py  script.py  usage.md
renderer/: preload.d.ts
renderer/.next/: trace
renderer/components/: layout.module.css  (+1 more)
(+62 files in other folders)
