[project]
name = "pyrenote-desk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=15.1.0",
    "gitpython>=3.1.45",
    "imageio-ffmpeg>=0.6.0",
    "importlib-resources>=6.5.2",
    "matplotlib>=3.10.6",
    "mutagen>=1.47.0",
    "numpy==1.26.4",
    "pandas>=2.3.2",
    "pydub>=0.25.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torch-utils>=0.1.2",
    "torchaudio>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.0",
]
